# app/Http/Controllers/API/V1/JwtAuthController.php
@@ -6,11 +6,12 @@ use App\Http\Controllers\Controller;
 
 /**
 * @OA\Post(
-*   path="/api/auth/v1/auth/login",
+*   path="/api/v1/auth/login",
 *   summary="Authenticate a user then returns a JWT token.",
+ *
 *   tags={"Auth"},
 *   @OA\Parameter(
-*       name="mail",
+*       name="email",
 *       in="query",
 *       description="Registered User's email",
 *       required=true,
@@ -29,57 +30,63 @@ use App\Http\Controllers\Controller;
 *       @OA\JsonContent(
 *           type="object",
 *           @OA\Property(
-*               property="token",
+*               property="access_token",
 *               type="string",
 *               description="180 random character string",
 *           ),
 *           @OA\Property(
-*               property="user_level",
-*               type="integer",
-*               description="1-6",
-*           )
+*               property="token_type",
+*               type="string",
+*               description="Type of token",
+*           ),
+*           @OA\Property(
+*               property="expires_in",
+*               type="string",
+*               description="Duration of the generated token in seconds",
+*           ),
 *       )
 *   ),
 *   @OA\Response(response="401", description="Validation errors"),
 * )
 *
 * @OA\Post(
-*     path="/api/auth/v1/auth/me",
+*     path="/api/v1/auth/me",
 *     summary="Returns the User's info.",
-*     summary="A user must be logged-in to use this endpoint.",
 *     tags={"Auth"},
- *    @OA\Response(
- *        response="200",
- *        description="Success",
- *        @OA\JsonContent(
- *            type="object",
- *            @OA\Property(
- *                property="email",
- *                type="string",
- *                description="Email of the logged-in user",
- *            ),
- *            @OA\Property(
- *                property="user_level",
- *                type="integer",
- *                description="1-6",
- *            )
- *        )
- *    ),
- *    @OA\Response(response="401", description="Validation errors"),
-*      security={{"bearerAuth":{}}}
+*     @OA\Response(
+*         response="200",
+*         description="Success",
+*         @OA\JsonContent(
+*             type="object",
+*             @OA\Property(
+*                 property="email",
+*                 type="string",
+*                 description="Email of the logged-in user",
+*             ),
+*             @OA\Property(
+*                 property="user_level",
+*                 type="integer",
+*                 description="1-6",
+*             )
+*         )
+*     ),
+*     @OA\Response(response="401", description="Validation errors"),
+*     security={{"bearerAuth":{}}}
 *  )
 *
-* @OA\Post(
-*       path="/api/auth/v1/auth/logout",
+*   @OA\Post(
+*       path="/api/v1/auth/logout",
 *       summary="Logouts a currently logged-in user.",
+*       tags={"Auth"},
 *       @OA\Response(response="200", description="Success."),
 *       @OA\Response(response="401", description="Unauthorized, no logged-in user."),
 *       security={{"bearerAuth":{}}}
 *   )
 *
-* @OA\Post(
-*       path="/api/auth/v1/auth/refresh",
+*   @OA\Post(
+*       path="/api/v1/auth/refresh",
 *       summary="Returns a new login token. User must be logged-in to use this.",
+*       tags={"Auth"},
 *       @OA\Response(response="201", description="returns [token = New JWT login token]"),
 *       @OA\Response(response="401", description="Unauthorized, no logged-in user."),
 *       security={{"bearerAuth":{}}}
