# app/Models/User.php
@@ -11,25 +11,6 @@ use Illuminate\Notifications\Notifiable;
 use Laravel\Sanctum\HasApiTokens;
 use PHPOpenSourceSaver\JWTAuth\Contracts\JWTSubject;
 
-/**
- *
- * @OA\Schema(
- * required={"password"},
- * @OA\Xml(name="User"),
- * @OA\Property(property="id", type="integer", readOnly="true", example="1"),
- * @OA\Property(property="email", type="string", readOnly="true", format="email", description="User unique email address", example="user@gmail.com"),
- * @OA\Property(property="user_level", type="integer", readOnly="true", description="User role", example="1"),
- * @OA\Property(property="email_verified_at", type="string", readOnly="true", format="date-time", description="Datetime marker of verification status", example="2019-02-25 12:59:20"),
- * @OA\Property(property="remember_token", type="string"),
- * @OA\Property(property="created_at", type="string"),
- * @OA\Property(property="updated_at", type="string"),
- * @OA\Property(property="deleted_at", type="string")
- * )
- *
- * Class User
- *
- */
-
 class User extends Authenticatable implements JWTSubject
 {
     use HasApiTokens, HasFactory, Notifiable, SoftDeletes;
@@ -39,7 +20,7 @@ class User extends Authenticatable implements JWTSubject
     protected $primaryKey = 'id';
 
     protected $fillable = [
-        'mail',
+        'email',
         'user_level',
         'password',
     ];
@@ -52,6 +33,10 @@ class User extends Authenticatable implements JWTSubject
         'created_at',
         'updated_at',
         'deleted_at',
+    ];
+
+    protected $appends = [
+        'isAdmin',
     ];
 
     protected $casts = [
@@ -72,5 +57,14 @@ class User extends Authenticatable implements JWTSubject
     public function employee(): HasOne
     {
         return $this->hasOne(Employee::class, 'id', 'id');
+    }
+
+    public function getIsAdminAttribute() : Bool
+    {
+        if($this->user_level >= 1 and $this->user_level <= 4) {
+            return true;
+        }
+
+        return false;
     }
 }
